# codeassist

./: README.md  pyproject.toml  run.py  training_loop.py
.github/ISSUE_TEMPLATE/: issue.md
research-report/: README.md
solution-tester/src/api/: server.py
web-ui/: package-lock.json  package.json
web-ui/src/: ZeroStyleApp.tsx
web-ui/src/app/api/episode-data/: route.ts
web-ui/src/components/: MonacoEditor.tsx
web-ui/src/simulation/simulators/: StateServiceHumanSimulator.ts
